--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,11 @@
-{"is_led_on": 0}
+{
+    "wifi": {
+        "ssid":"raspi-webgui-02",
+        "password":"raspberrypi"
+    },
+    "mqtt": {
+        "broker_url":"10.3.141.1",
+        "client_name":"vitor-hovercraft"
+    }
+    "max_retries": 50
+}
